Bug 108227 - Table style is not highlighted in Stylist (F11 Right SideBar)
Summary: Table style is not highlighted in Stylist (F11 Right SideBar)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.4.0.0.beta1
Hardware: All All
: lowest trivial
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.1.0 target:6.0.2
Keywords:
Depends on:
Blocks: Sidebar-Styles Writer-Table-Styles
  Show dependency treegraph
 
Reported: 2017-05-29 16:08 UTC by Gabriele Ponzo
Modified: 2020-06-16 05:15 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriele Ponzo 2017-05-29 16:08:24 UTC
Description:
If you click on a paragraph and hit F11 you can see the style of that paragraph highlighted among the list on the right side bar (Stylist).

If you create a table and use the Autoformat button in the table options and there you choose a style, once the table is created you can't see its style highlighted on the right, selecting Table Styles from top buttons.

Steps to Reproduce:
1. Open Writer
2. Hit CTRL + F12 to create a new Table via the advanced options
3. Click on Autoformat Button
4. Choose a style and confirm with OK
5. Click Insert
6. Click inside the table
7. Hit F11 to open the Stylist
8. Click on 6th button on the top of it

Actual Results:  
No style is HighLighted

Expected Results:
The style chosen should be highlighted among the list


Reproducible: Always

User Profile Reset: Yes

Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:53.0) Gecko/20100101 Firefox/53.0
Comment 1 Joel Madero 2017-05-29 16:12:12 UTC
Confirmed.

Version: 5.5.0.0.alpha0+
Build ID: 5df5e1bbc68f54dd7bc4b46f0a05a7150d84470a
CPU threads: 2; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 2 Gabriele Ponzo 2018-02-05 15:25:49 UTC
Still present in 6.1:

Version: 6.1.0.0.alpha0+
Build ID: 33f0eefd60c9f0ae56593583f094f025e00f3d35
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-02-04_23:51:32
Locale: it-IT (it_IT.UTF-8); Calc: group
Comment 3 Jim Raykowski 2018-02-07 08:27:15 UTC
Hi Gabriele nice bug find!
Here is a patch:
https://gerrit.libreoffice.org/#/c/49338/
Comment 4 Commit Notification 2018-02-13 14:01:04 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1b13f486eacc60c9b71ec9f1b29cde2f4504d4e

tdf#108227 Set table style so it is highlighted in Sidebar styles list

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2018-02-13 22:00:53 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=55b37cc3ade30257858515b1a062ff9130488a5f&h=libreoffice-6-0

tdf#108227 Set table style so it is highlighted in Sidebar styles list

It will be available in 6.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Dieter 2019-03-15 08:03:28 UTC
It works with all table styles except default style. I remember a bug report related to this, but I couldn't find it
Comment 7 Jim Raykowski 2019-03-16 21:07:16 UTC
(In reply to Dieter Praas from comment #6)
> It works with all table styles except default style. I remember a bug report
> related to this, but I couldn't find it

Hi Dieter,

Default Style is being used as a template on insert of a new table from the Insert Table dialog and tool bar button. To actually set it as the table style double click on Default Style in the side bar Styes deck/panel when the cursor is in the table. When a table style is applied, direct formatting is replaced by the table style formatting on table updates, e.g. on add, insert, delete of row or column. You can see this by changing text font style and/or font size in a table cell and then add, insert or delete a row or column. For a table with Default Style as a template the direct formatting is not replaced. Default Style works well as a template because it does not have row color assignments. Template use of table styles that have first, last, even, odd row/column color assignments would not follow their color scheme on add/insert/delete row/column. Even so, using table styles as templates may be a nice option.
Comment 8 Dieter 2019-03-17 13:02:19 UTC
(In reply to Jim Raykowski from comment #7)

Jim,

thank you for clarification (although I'm not sure, if I've understood everything). So there's a difference between "default style" as a template (Insert table dialog) and "default style" as a table style (in the table style list). If 've understood this correct in that way, it is not very intuitive.
Comment 9 Jim Raykowski 2019-03-19 06:18:22 UTC
(In reply to Dieter Praas from comment #8)
> it is not very intuitive.

I agree. 
 
Possible solutions:

1) Remove 'Default Style' from the list of table styles shown in the Sidebar table styles panel

2) Add an option in the Insert Table dialog to insert a table using table styles as a template. Document the difference between template and style use.
Comment 10 Dieter 2019-03-19 07:42:33 UTC
(In reply to Jim Raykowski from comment #9)
> (In reply to Dieter Praas from comment #8)
> > it is not very intuitive.
> 
> I agree. 
>  
> Possible solutions:
> 
> 1) Remove 'Default Style' from the list of table styles shown in the Sidebar
> table styles panel
> 
> 2) Add an option in the Insert Table dialog to insert a table using table
> styles as a template. Document the difference between template and style use.

So shall I open a new bug report and ask design-team for feedback?
Comment 11 Jim Raykowski 2019-03-19 08:38:42 UTC
(In reply to Dieter Praas from comment #10)

> So shall I open a new bug report and ask design-team for feedback?

That sounds like a good idea to me. I'm not sure who to ask for feedback.
Comment 12 Dieter 2019-07-21 10:04:09 UTC
(In reply to Jim Raykowski from comment #11)
> (In reply to Dieter Praas from comment #10)
> 
> > So shall I open a new bug report and ask design-team for feedback?
> 
> That sounds like a good idea to me. I'm not sure who to ask for feedback.

=> bug 124206

=> RESOLVED VERIFIED (see comment 6)