tdf#108227 Set table style so it is highlighted in Sidebar styles list

Change-Id: I930085839c9ab7297e492c1463b54d41c087361c